--- a/GameDevStyle.css
+++ b/GameDevStyle.css
@@ -97,6 +97,7 @@ body {
     position: relative;
     background-color: black; 
     z-index: 2;  
+    padding-bottom: 30px;
 }
 
 #showReel {
@@ -110,6 +111,12 @@ body {
     opacity: 0.6;
     filter: blur(0.1rem);    
     pointer-events: none;    
+}
+
+.subtitle{
+    font-size: 30px;
+    font-weight: 1;
+    margin-bottom: 30px;
 }
 
 .gameTypeWrapper{
