--- a/style.css
+++ b/style.css
@@ -186,6 +186,14 @@ body {
     background-position: center; 
 }
 
+.standardStoreLink {
+    background-image: url('Media/LinkIcon.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-size:60%;
+    background-position: center; 
+}
+
 /* Content Wrapper */
 .video-wrapper {
     position: relative;
@@ -202,13 +210,34 @@ body {
     font-family: Arial, sans-serif;
     color: #333;
 }
-.sectionTitle {
+
+.sectionTitle {            
+    border-bottom: 2px solid #333;
+    padding-bottom: 5px;
+    color: rgb(121, 121, 121);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.5rem;    
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    font-weight: 400;
+    margin-top: 40px;
+    margin-bottom: 10px;  
+}
+
+.sectionSubtitle{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    border-bottom: 2px solid #333;
+    padding-bottom: 5px;
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
     border-bottom: 2px solid #333;
     padding-bottom: 5px;
 }
+
 .textBlock {
     font-size: 16px;
     line-height: 1.5;
